# enclaiv

./: .gitignore  BUILD.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  README.md  docker-compose.yml  enclaiv.yaml
.claude/: settings.json
.claude/rules/: taste-skill.md
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/enclaiv/: __init__.py  config.py  kraftfile.py  main.py  proxy_manager.py
cli/enclaiv/commands/: __init__.py  doctor.py  init_cmd.py  policy.py  run.py  setup.py  violations.py
control-plane/: Dockerfile  db.py  main.py  models.py  requirements.txt
control-plane/routes/: llm.py  sessions.py
hardening/: enclaiv_runner.py  entrypoint.sh  mandatory_denies.yaml  strip_rootfs.py
monitoring/: alerts.yml  prometheus.yml
proxy/: Dockerfile  go.mod
proxy/cmd/proxy/: main.go
proxy/config/: allowlist.json
proxy/pkg/allowlist/: allowlist.go  allowlist_test.go
proxy/pkg/audit/: logger.go
proxy/pkg/credentials/: injector.go  injector_test.go
proxy/pkg/httpproxy/: proxy.go  proxy_test.go
proxy/pkg/violations/: api.go  store.go  store_test.go
templates/policies/: anthropic.yaml  github.yaml  openai.yaml  pypi.yaml  web-research.yaml
templates/python-basic/: Dockerfile  agent.py  enclaiv.yaml  requirements.txt
test-agent/: Dockerfile  Kraftfile  agent.py
web/: Dockerfile  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: animated-terminal.tsx  cta-section.tsx  enclaiv-logo.tsx  footer.tsx  hero.tsx  magnetic-button.tsx  nav.tsx  particle-network.tsx  product-sections.tsx
(+6 files in other folders)
